--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <header>
     <img id="logo" src="images/logo.png" alt="Error 404: Object Not Found Logo"> 
-    <h1>Error 404: Object Not Found</h1>
+    <!-- <h1>Error 404: Object Not Found</h1> -->
   </header>
 
   <main>
